incluyendo correciones en los textos de las estadisticias de cada partido

--- a/zec.html
+++ b/zec.html
@@ -73,10 +73,10 @@
             </h2>
             <span class="partidos-grafico-ciudadanos"></span>
             <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuantas veces han votado en su contra el resto de partidos.</p>
-            <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Popular</strong> ha votado 38 veces en contra.</p>
-            <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Socialista Obrero Español</strong> ha votado 10 veces en contra.</p>
-            <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> ha votado 14 veces en contra.</p>
-            <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> no ha votado nunca en su contra.</p>
+            <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Popular</strong> ha votado 40 veces en contra.</p>
+            <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Socialista Obrero Español</strong> ha votado 12 veces en contra.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> ha votado 15 veces en contra.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha votado en 1 ocasión en su contra.</p>
         </div>
         <div class="partidos-grafico-grafica">
             <canvas id="en-contra"></canvas>
@@ -91,7 +91,7 @@
             <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Popular</strong> ha votado 3 veces a su favor.</p>
             <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Socialista Obrero Español</strong> ha votado 32 veces a su favor.</p>
             <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> ha votado 21 veces a su favor.</p>
-            <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha votado 43 veces a su favor.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha votado 44 veces a su favor.</p>
         </div>
         <div class="partidos-grafico-grafica">
             <canvas id="a-favor"></canvas>
@@ -105,7 +105,7 @@
             <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuantas veces se han abstenido el resto de partidos.</p>
             <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Popular</strong> ha optado por la abstención en 7 ocasiones.</p>
             <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Socialista Obrero Español</strong> ha optado por la abstención en 6 ocasiones.</p>
-            <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> ha optado por la abstención en 13 ocasiones.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> ha optado por la abstención en 14 ocasiones.</p>
             <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha optado por la abstención en 5 ocasiones.</p>
         </div>
         <div class="partidos-grafico-grafica">
@@ -118,9 +118,9 @@
             </h2>
             <span class="partidos-grafico-ciudadanos"></span>
             <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver el número de veces que <strong>Zaragoza En Común</strong> ha votado en contra del resto de partidos.</p>
-            <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha votado en contra del <strong>Partido Popular</strong> en 56 ocasiones.</p>
-            <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha votado en contra del <strong>Partido Socialista Obrero Español</strong> en 23 ocasiones.</p>
-            <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha votado en contra de <strong>Ciudadanos</strong> en 12 ocasiones.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha votado en contra del <strong>Partido Popular</strong> en 57 ocasiones.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha votado en contra del <strong>Partido Socialista Obrero Español</strong> en 25 ocasiones.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha votado en contra de <strong>Ciudadanos</strong> en 14 ocasiones.</p>
             <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha votado en contra de <strong>Chunta Aragonesista</strong> en 6 ocasiones.</p>
         </div>
         <div class="partidos-grafico-grafica">
@@ -133,10 +133,10 @@
             </h2>
             <span class="partidos-grafico-ciudadanos"></span>
             <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver el número de veces que <strong>Zaragoza En Común</strong> ha votado a favor del resto de partidos.</p>
-            <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha votado a favor del <strong>Partido Popular</strong> en 4 ocasiones.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha votado a favor del <strong>Partido Popular</strong> en 6 ocasiones.</p>
             <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha votado a favor del <strong>Partido Socialista Obrero Español</strong> en 19 ocasiones.</p>
             <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha votado a favor de <strong>Ciudadanos</strong> en 12 ocasiones.</p>
-            <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha votado a favor de <strong>Chunta Aragonesista</strong> en 42 ocasiones.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha votado a favor de <strong>Chunta Aragonesista</strong> en 43 ocasiones.</p>
         </div>
         <div class="partidos-grafico-grafica">
             <canvas id="votando-a-favor"></canvas>
