--- a/cha.html
+++ b/cha.html
@@ -66,7 +66,7 @@
             </h2>
             <span class="partidos-grafico-ciudadanos"></span>
             <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuantas veces han votado en su contra el resto de partidos.</p>
-            <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Popular</strong> ha votado 29 veces en contra.</p>
+            <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Popular</strong> ha votado 30 veces en contra.</p>
             <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha votado 6 veces en contra.</p>
             <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Socialista Obrero Español</strong> ha votado 6 veces en contra.</p>
             <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> ha votado 13 veces en contra.</p>
@@ -81,10 +81,10 @@
             </h2>
             <span class="partidos-grafico-ciudadanos"></span>
             <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuantas veces han votado a su favor el resto de partidos.</p>
-            <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Popular</strong> ha votado 5 veces a su favor.</p>
-            <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha votado 42 veces a su favor.</p>
-            <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Socialista Obrero Español</strong> ha votado 40 veces a su favor.</p>
-            <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> ha votado 27 veces a su favor.</p>
+            <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Popular</strong> ha votado 6 veces a su favor.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha votado 43 veces a su favor.</p>
+            <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Socialista Obrero Español</strong> ha votado 42 veces a su favor.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> ha votado 29 veces a su favor.</p>
         </div>
         <div class="partidos-grafico-grafica">
             <canvas id="a-favor"></canvas>
@@ -111,10 +111,10 @@
             </h2>
             <span class="partidos-grafico-ciudadanos"></span>
             <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver el número de veces que el <strong>Chunta Aragonesista</strong> ha votado en contra del resto de partidos.</p>
-            <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha votado en contra del <strong>Partido Popular</strong> en 42 ocasiones.</p>
-            <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> nunca ha votado en contra de <strong>Zaragoza En Común</strong>.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha votado en contra del <strong>Partido Popular</strong> en 44 ocasiones.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha votado en contra de <strong>Zaragoza En Común</strong> en 1 ocasión.</p>
             <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha votado en contra del <strong>Partido Socialista Obrero Español</strong> en 9 ocasiones.</p>
-            <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha votado en contra de <strong>Ciudadanos</strong> en 12 ocasiones.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha votado en contra de <strong>Ciudadanos</strong> en 13 ocasiones.</p>
         </div>
         <div class="partidos-grafico-grafica">
             <canvas id="votando-en-contra"></canvas>
@@ -126,10 +126,10 @@
             </h2>
             <span class="partidos-grafico-ciudadanos"></span>
             <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver el número de veces que el <strong>Chunta Aragonesista</strong> ha votado a favor del resto de partidos.</p>
-            <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha votado a favor del <strong>Partido Popular</strong> en 13 ocasiones.</p>
-            <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha votado a favor de <strong>Zaragoza En Común</strong> en 43 ocasiones.</p>
-            <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha votado a favor del <strong>Partido Socialista Obrero Español</strong> en 43 ocasiones.</p>
-            <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha votado a favor de <strong>Ciudadanos</strong> en 14 ocasiones.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha votado a favor del <strong>Partido Popular</strong> en 14 ocasiones.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha votado a favor de <strong>Zaragoza En Común</strong> en 44 ocasiones.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha votado a favor del <strong>Partido Socialista Obrero Español</strong> en 46 ocasiones.</p>
+            <p class="partidos-grafico-parrafo maw-50"><strong>Chunta Aragonesista</strong> ha votado a favor de <strong>Ciudadanos</strong> en 15 ocasiones.</p>
         </div>
         <div class="partidos-grafico-grafica">
             <canvas id="votando-a-favor"></canvas>
