incluidas gráficas con todos los resultados por distrito electoral

--- a/cha.html
+++ b/cha.html
@@ -60,7 +60,7 @@
             </div>
         </div>
     </section>
-    <section class="graficas-cha">
+    <section class="graficas-cha graficas-partido">
 
     </section>
     <section class="partidos-grafico partidos-grafico-cha">
