--- a/pp.html
+++ b/pp.html
@@ -68,6 +68,9 @@
             </div>
         </div>
     </section>
+    <section class="graficas-pp graficas-partido">
+
+    </section>
     <section class="partidos-grafico partidos-grafico-pp">
         <div class="partidos-grafico-texto">
             <h2 class="partidos-grafico-titulo">¿QUIÉN VOTA EN SU CONTRA?
