--- a/psoe.html
+++ b/psoe.html
@@ -64,6 +64,9 @@
             </div>
         </div>
     </section>
+    <section class="graficas-psoe graficas-partido">
+
+    </section>
     <section class="partidos-grafico partidos-grafico-psoe">
         <div class="partidos-grafico-texto">
             <h2 class="partidos-grafico-titulo">¿QUIÉN VOTA EN SU CONTRA?
