responsive para las gráficas por mapa

--- a/cha.html
+++ b/cha.html
@@ -53,15 +53,22 @@
             <p class="partidos-cabecera-texto-derecha">Concurrió por primera vez a unas elecciones en 1987.</p>
         </div>
     </section>
+    <section class="partidos-grafico partidos-grafico-cha">
+        <div class="partidos-grafico-texto">
+            <h2 class="partidos-grafico-titulo">Resultados por distrito electoral
+            </h2>
+            <p class="partidos-grafico-parrafo maw-50">A continuación se puede ver como ha ido evolucionando el voto por distrito electoral desde 1987 hasta 2015. <a href="">Según la delegación del Instituto Nacional de Estadística en Aragón, los distritos electorales de Zaragoza nunca han variado</a>. Así que esta división no es igual a otras realizadas por el Ayuntamiento de Zaragoza.</p>
+        </div>
+        <section class="graficas-cha graficas-partido">
+
+        </section>
+    </section>
     <section class="mapa-container mapa-container-cha">
         <div id="map-wrap">
             <div id="map">
                 <span class="tooltip-title">CHUNTA ARAGONESISTA 1987-2015</span>
             </div>
         </div>
-    </section>
-    <section class="graficas-cha graficas-partido">
-
     </section>
     <section class="partidos-grafico partidos-grafico-cha">
         <div class="partidos-grafico-texto">
