--- a/pp.html
+++ b/pp.html
@@ -61,15 +61,20 @@
             <canvas id="historico"></canvas>
         </div>
     </section>
+    <section class="partidos-grafico partidos-grafico-pp">
+        <div class="partidos-grafico-texto">
+            <h2 class="partidos-grafico-titulo">Resultados por distrito electoral
+            </h2>
+            <p class="partidos-grafico-parrafo maw-50">A continuación se puede ver como ha ido evolucionando el voto por distrito electoral desde 1987 hasta 2015. <a href="">Según la delegación del Instituto Nacional de Estadística en Aragón, los distritos electorales de Zaragoza nunca han variado</a>. Así que esta división no es igual a otras realizadas por el Ayuntamiento de Zaragoza.</p>
+        </div>
+        <section class="graficas-pp graficas-partido"></section>
+    </section>
     <section class="mapa-container mapa-container-pp">
         <div id="map-wrap">
             <div id="map">
                 <span class="tooltip-title">PARTIDO POPULAR 1987-2015</span>
             </div>
         </div>
-    </section>
-    <section class="graficas-pp graficas-partido">
-
     </section>
     <section class="partidos-grafico partidos-grafico-pp">
         <div class="partidos-grafico-texto">
