corrgiendo el texto de los mapas

--- a/pp.html
+++ b/pp.html
@@ -63,9 +63,9 @@
     </section>
     <section class="partidos-grafico partidos-grafico-pp">
         <div class="partidos-grafico-texto">
-            <h2 class="partidos-grafico-titulo">Resultados por distrito electoral
+            <h2 class="partidos-grafico-titulo">RESULTADOS POR DISTRITO ELECTORAL
             </h2>
-            <p class="partidos-grafico-parrafo maw-50">A continuación se puede ver como ha ido evolucionando el voto por distrito electoral desde 1987 hasta 2015. <a href="">Según la delegación del Instituto Nacional de Estadística en Aragón, los distritos electorales de Zaragoza nunca han variado</a>. Así que esta división no es igual a otras realizadas por el Ayuntamiento de Zaragoza.</p>
+            <p class="partidos-grafico-parrafo maw-50">A continuación se puede ver como ha ido evolucionando el voto por distrito electoral desde 1987 hasta 2015. Hay que tener en cuenta que esta división no es igual a otras realizadas por el Ayuntamiento de Zaragoza. <a href="">Según la delegación del Instituto Nacional de Estadística en Aragón, los distritos electorales de Zaragoza nunca han variado</a>.</p>
         </div>
         <section class="graficas-pp graficas-partido"></section>
     </section>
