desacoplando astral del footer y header

--- a/cha.html
+++ b/cha.html
@@ -17,9 +17,9 @@
 </head>
 
 <body class="mih-100">
-    <header class="font-0 w-100 zi-10 bgc-white">
-        <nav class="padding-0__5-1 nav-grid">
-            <a href="http://bislai.co" class="link font-1 font-2--m margin-y0 bold display-ib vertical-am font-w2 font-bislai nav-grid-first"><span class="link-name">BISLAI</span></a>
+    <header class="header">
+        <nav class="nav-grid">
+            <a href="http://bislai.co" class="link display-ib nav-grid-first"><span class="link-name">BISLAI</span></a>
             <div class="w-100--m maw-70p--l padding-0__5-0">
                 <div class="pos-r">
                     <form action="/buscador">
@@ -33,8 +33,8 @@
                 </div>
             </div>
             <div class="nav-grid-second display-ib--m">
-                <a class="pos-r font-bislai link letter-0-12--m" href="/estadisticas"><span class="link-name">ESTADÍSTICAS</span></a>
-                <a class="pos-r font-bislai link letter-0-12--m" href="/partidos"><span class="link-name">PARTIDOS</span></a>
+                <a class="nav-grid-second-link link" href="/estadisticas"><span class="link-name">ESTADÍSTICAS</span></a>
+                <a class="nav-grid-second-link link" href="/partidos"><span class="link-name">PARTIDOS</span></a>
             </div>
         </nav>
     </header>
@@ -57,7 +57,7 @@
         <div class="partidos-grafico-texto">
             <h2 class="partidos-grafico-titulo">RESULTADOS POR DISTRITO ELECTORAL
             </h2>
-            <p class="partidos-grafico-parrafo maw-50">A continuación se puede ver como ha ido evolucionando el voto <strong>por distrito electoral desde 1987 hasta 2015</strong>. Hay que tener en cuenta que esta división no es igual a otras realizadas por el Ayuntamiento de Zaragoza. <a href="">Según la delegación del Instituto Nacional de Estadística en Aragón, los distritos electorales de Zaragoza nunca han variado</a>.</p>
+            <p class="partidos-grafico-parrafo maw-50">En las siguientes gráficas se puede ver como ha ido evolucionando el voto <strong>por distrito electoral desde 1987 hasta 2015</strong>. Hay que tener en cuenta que esta división no es igual a otras realizadas por el Ayuntamiento de Zaragoza. <a href="">Según la delegación del Instituto Nacional de Estadística en Aragón, los distritos electorales de Zaragoza nunca han variado</a>.</p>
         </div>
         <section class="graficas-cha graficas-partido">
 
@@ -147,15 +147,15 @@
     </section>
     <footer class="padding-1 padding-4-0--l borderc-grey border-t1 woodsmoke font-w6 font-s footer">
         <div class="maw-60 grid-footer">
-            <a class="black font-1 display-ib vertical-am textd-n texta-r padding-r1 font-bislai" href="/">BISLAI · ACCESIBILIDAD POLÍTICA</a>
-            <a class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1 font-bislai" href="/creditos">CRÉDITOS</a>
-            <a href="http://twitter.com/debislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1 font-bislai">TWITTER</a>
-            <a href="http://github.com/jorgeatgu/bislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1 font-bislai">GITHUB</a>
+            <a class="grid-footer-links" href="/">BISLAI · ACCESIBILIDAD POLÍTICA</a>
+            <a class="grid-footer-links" href="/creditos">CRÉDITOS</a>
+            <a href="http://twitter.com/debislai" class="grid-footer-links">TWITTER</a>
+            <a href="http://github.com/jorgeatgu/bislai" class="grid-footer-links">GITHUB</a>
         </div>
 
 
 
-            <span class="maw-60 display-b">Esta obra está bajo una <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">licencia de Creative Commons Reconocimiento-CompartirIgual 4.0 Internacional</a>.</span></a>
+            <div class="maw-60">Esta obra está bajo una <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">licencia de Creative Commons Reconocimiento-CompartirIgual 4.0 Internacional</a>.</div>
             <p class="maw-60 padding-1-0">© 2018 - Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - hola@bislai.co</p>
         </div>
     </footer>
