--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
 <body class="mih-100">
     <div class="column blue-light">
-        <header class="font-0 w-100 zi-10 header-home">
+        <header class="header header-home">
             <nav class="nav-grid">
-                <a href="http://bislai.co" class="link font-1 font-2--m margin-y0 bold display-ib vertical-am font-w2 font-bislai nav-grid-first"><span class="link-name">BISLAI</span></a>
+                <a href="http://bislai.co" class="link display-ib nav-grid-first"><span class="link-name">BISLAI</span></a>
                 <div class="nav-grid-second display-ib--m">
                     <a class="pos-r font-bislai link letter-0-12--m white" href="/estadisticas"><span class="link-name">ESTADÍSTICAS</span></a>
                     <a class="pos-r font-bislai link letter-0-12--m white" href="/partidos"><span class="link-name">PARTIDOS</span></a>
@@ -124,15 +124,15 @@
     </section>
     <footer class="padding-1 padding-4-0--l borderc-grey border-t1 woodsmoke font-w6 font-s footer">
         <div class="maw-60 grid-footer">
-            <a class="black font-1 display-ib vertical-am textd-n texta-r padding-r1 font-bislai" href="/">BISLAI · ACCESIBILIDAD POLÍTICA</a>
-            <a class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1 font-bislai" href="/creditos">CRÉDITOS</a>
-            <a href="http://twitter.com/debislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1 font-bislai">TWITTER</a>
-            <a href="http://github.com/jorgeatgu/bislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1 font-bislai">GITHUB</a>
+            <a class="grid-footer-links" href="/">BISLAI · ACCESIBILIDAD POLÍTICA</a>
+            <a class="grid-footer-links" href="/creditos">CRÉDITOS</a>
+            <a href="http://twitter.com/debislai" class="grid-footer-links">TWITTER</a>
+            <a href="http://github.com/jorgeatgu/bislai" class="grid-footer-links">GITHUB</a>
         </div>
 
 
 
-            <span class="maw-60 display-b">Esta obra está bajo una <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">licencia de Creative Commons Reconocimiento-CompartirIgual 4.0 Internacional</a>.</span></a>
+            <div class="maw-60">Esta obra está bajo una <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">licencia de Creative Commons Reconocimiento-CompartirIgual 4.0 Internacional</a>.</div>
             <p class="maw-60 padding-1-0">© 2018 - Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - hola@bislai.co</p>
         </div>
     </footer>
