desacoplando astral tabla de mociones y navegacion entre plenos

--- a/index.html
+++ b/index.html
@@ -77,41 +77,41 @@
             <label class="label-record font-1-5 font-3--m font-s" for="tab4">2018</label>
             <!-- ENERO -->
             <section class="tabla-calendario contenido1">
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2015/27-07-2015">27 de julio de 2015</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2015/02-10-2015">2 de octubre de 2015</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2015/30-10-2015">30 de octubre de 2015</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2015/27-11-2015">27 de noviembre de 2015</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2015/23-12-2015">23 de diciembre de 2015</a>
+                <a class="tabla-calendario-link" href="/plenos/2015/27-07-2015">27 de julio de 2015</a>
+                <a class="tabla-calendario-link" href="/plenos/2015/02-10-2015">2 de octubre de 2015</a>
+                <a class="tabla-calendario-link" href="/plenos/2015/30-10-2015">30 de octubre de 2015</a>
+                <a class="tabla-calendario-link" href="/plenos/2015/27-11-2015">27 de noviembre de 2015</a>
+                <a class="tabla-calendario-link" href="/plenos/2015/23-12-2015">23 de diciembre de 2015</a>
             </section>
             <!-- FEBRERO -->
             <section class="tabla-calendario  contenido2">
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2016/28-01-2016">28 de enero de 2016</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2016/26-02-2016">26 de febrero de 2016</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2016/23-03-2016">23 de marzo de 2016</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2016/29-04-2016">29 de abril de 2016</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2016/27-05-2016">27 de mayo de 2016</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2016/01-07-2016">1 de julio de 2016</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2016/22-07-2016">22 de julio de 2016</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2016/30-09-2016">30 de septiembre de 2016</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2016/28-10-2016">28 de octubre de 2016</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2016/02-12-2016">2 de diciembre de 2016</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2016/23-12-2016">23 de diciembre de 2016</a>
+                <a class="tabla-calendario-link" href="/plenos/2016/28-01-2016">28 de enero de 2016</a>
+                <a class="tabla-calendario-link" href="/plenos/2016/26-02-2016">26 de febrero de 2016</a>
+                <a class="tabla-calendario-link" href="/plenos/2016/23-03-2016">23 de marzo de 2016</a>
+                <a class="tabla-calendario-link" href="/plenos/2016/29-04-2016">29 de abril de 2016</a>
+                <a class="tabla-calendario-link" href="/plenos/2016/27-05-2016">27 de mayo de 2016</a>
+                <a class="tabla-calendario-link" href="/plenos/2016/01-07-2016">1 de julio de 2016</a>
+                <a class="tabla-calendario-link" href="/plenos/2016/22-07-2016">22 de julio de 2016</a>
+                <a class="tabla-calendario-link" href="/plenos/2016/30-09-2016">30 de septiembre de 2016</a>
+                <a class="tabla-calendario-link" href="/plenos/2016/28-10-2016">28 de octubre de 2016</a>
+                <a class="tabla-calendario-link" href="/plenos/2016/02-12-2016">2 de diciembre de 2016</a>
+                <a class="tabla-calendario-link" href="/plenos/2016/23-12-2016">23 de diciembre de 2016</a>
             </section>
             <section class="tabla-calendario  contenido3">
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2017/03-02-2017">3 de febrero de 2017</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2017/24-02-2017">24 de febrero de 2017</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2017/31-03-2017">31 de marzo de 2017</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2017/02-06-2017">2 de junio de 2017</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2017/30-06-2017">30 de junio de 2017</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2017/28-07-2017">28 de julio de 2017</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2017/29-09-2017">23 de septiembre de 2017</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2017/30-10-2017">30 de octubre de 2017</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2017/24-11-2017">24 de noviembre de 2017</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2017/22-12-2017">22 de diciembre de 2017</a>
+                <a class="tabla-calendario-link" href="/plenos/2017/03-02-2017">3 de febrero de 2017</a>
+                <a class="tabla-calendario-link" href="/plenos/2017/24-02-2017">24 de febrero de 2017</a>
+                <a class="tabla-calendario-link" href="/plenos/2017/31-03-2017">31 de marzo de 2017</a>
+                <a class="tabla-calendario-link" href="/plenos/2017/02-06-2017">2 de junio de 2017</a>
+                <a class="tabla-calendario-link" href="/plenos/2017/30-06-2017">30 de junio de 2017</a>
+                <a class="tabla-calendario-link" href="/plenos/2017/28-07-2017">28 de julio de 2017</a>
+                <a class="tabla-calendario-link" href="/plenos/2017/29-09-2017">23 de septiembre de 2017</a>
+                <a class="tabla-calendario-link" href="/plenos/2017/30-10-2017">30 de octubre de 2017</a>
+                <a class="tabla-calendario-link" href="/plenos/2017/24-11-2017">24 de noviembre de 2017</a>
+                <a class="tabla-calendario-link" href="/plenos/2017/22-12-2017">22 de diciembre de 2017</a>
             </section>
             <section class="tabla-calendario  contenido4">
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2018/02-02-2018">2 de febrero de 2018</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2018/02-03-2018">2 de marzo de 2018</a>
+                <a class="tabla-calendario-link" href="/plenos/2018/02-02-2018">2 de febrero de 2018</a>
+                <a class="tabla-calendario-link" href="/plenos/2018/02-03-2018">2 de marzo de 2018</a>
             </section>
         </article>
     </section>
