desacoplando astral del footer

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             </div>
         </div>
     </section>
-    <footer class="padding-1 padding-4-0--l borderc-grey border-t1 woodsmoke font-w6 font-s footer">
+    <footer class="footer">
         <div class="maw-60 grid-footer">
             <a class="grid-footer-links" href="/">BISLAI · ACCESIBILIDAD POLÍTICA</a>
             <a class="grid-footer-links" href="/creditos">CRÉDITOS</a>
