--- a/404.html
+++ b/404.html
@@ -39,7 +39,7 @@
         <p class="aaron">La información es poder. Pero como todo poder, hay quienes quieren mantenerlo para sí mismos.
             <a class="swartz" href="https://en.wikipedia.org/wiki/Aaron_Swartz">Aaron Swartz | 1986 - 2013</a></p>
     </section>
-    <footer class="padding-1 padding-4-0--l borderc-grey border-t1 woodsmoke font-w6 font-s footer">
+    <footer class="footer">
         <div class="maw-60 grid-footer">
             <a class="grid-footer-links" href="/">BISLAI · ACCESIBILIDAD POLÍTICA</a>
             <a class="grid-footer-links" href="/creditos">CRÉDITOS</a>
