--- a/partidos.html
+++ b/partidos.html
@@ -66,7 +66,7 @@
                     <p class="partido-card-concejales">2 CONCEJALES</p>
             </a>
     </section>
-    <footer class="padding-1 padding-4-0--l borderc-grey border-t1 woodsmoke font-w6 font-s footer">
+    <footer class="footer">
         <div class="maw-60 grid-footer">
             <a class="grid-footer-links" href="/">BISLAI · ACCESIBILIDAD POLÍTICA</a>
             <a class="grid-footer-links" href="/creditos">CRÉDITOS</a>
