--- a/pp.html
+++ b/pp.html
@@ -152,7 +152,7 @@
             <canvas id="votando-a-favor"></canvas>
         </div>
     </section>
-    <footer class="padding-1 padding-4-0--l borderc-grey border-t1 woodsmoke font-w6 font-s footer">
+    <footer class="footer">
         <div class="maw-60 grid-footer">
             <a class="grid-footer-links" href="/">BISLAI · ACCESIBILIDAD POLÍTICA</a>
             <a class="grid-footer-links" href="/creditos">CRÉDITOS</a>
