--- a/cha.html
+++ b/cha.html
@@ -20,17 +20,15 @@
     <header class="header">
         <nav class="nav-grid">
             <a href="http://bislai.co" class="link display-ib nav-grid-first"><span class="link-name">BISLAI</span></a>
-            <div class="w-100--m maw-70p--l padding-0__5-0">
-                <div class="pos-r">
+            <div class="contenedor-buscador">
                     <form action="/buscador">
-                        <input placeholder="Busca en cualquier pleno" class="w-80 w-70--m padding-1 vertical-at" type="text" name="q" id="tipue_search_input">
+                        <input placeholder="Busca en cualquier pleno" class="input-buscador" type="text" name="q" id="tipue_search_input">
                         <button class="btn-search" type="submit">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                                 <path d="M23.9,23.3l-6.8-6.8a9.9,9.9,0,1,0-.6.6l6.8,6.8a.4.4,0,0,0,.6-.6Zm-14-4.4a9,9,0,1,1,9-9A9,9,0,0,1,9.9,18.9Z"/>
                             </svg>
                         </button>
                     </form>
-                </div>
             </div>
             <div class="nav-grid-second display-ib--m">
                 <a class="nav-grid-second-link link" href="/estadisticas"><span class="link-name">ESTADÍSTICAS</span></a>
