modificando imagenes y textos de la seccion de datos

--- a/data.html
+++ b/data.html
@@ -37,7 +37,21 @@
         <h2 class="data-titulo">DATOS</h2>
         <p class="data-texto">Conforme he ido desarrollando <strong>BISLAI</strong> he ido generando más y más datos. Algunos datos los he convertido y filtrado a formatos más amigables como JSON y CSV.</p>
         <p>Es hora de compartir lo recolectado.</p>
-        <!-- <svg class="data-icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 100 125" width="100" height="125"><path fill="#000000" d="M50,5L11.029,27.499v44.999L50,95l38.971-22.501V27.5L50,5z M30.54,38.717L12.079,28.048l18.457-10.656  l18.468,10.672L30.54,38.717z M50.031,28.658l18.426,10.648L50,49.963L31.552,39.302L50.031,28.658z M12.029,29.195l18.483,10.671  l0.001,20.225l-18.484-10.68V29.195z M31.513,40.443L49.5,50.829v20.232L31.514,60.668L31.513,40.443z M49.5,72.215v21.342  L31.514,83.172l0-21.342L49.5,72.215z M50.5,72.215l17.989-10.386l-0.001,21.342L50.5,93.557V72.215z M50.5,71.061V50.829  l17.99-10.387l-0.001,20.215L50.5,71.061z M69.49,39.865l18.48-10.669v20.196L69.489,60.079L69.49,39.865z M87.971,28.604  l-0.244-0.423l-18.273,10.55L51.021,28.088l18.506-10.659l18.443,10.648V28.604z M68.483,16.826L49.993,27.494L31.518,16.825  L50,6.155L68.483,16.826z M12.029,50.582l18.484,10.671l0,21.342L12.029,71.921V50.582z M69.488,82.594l0.001-21.342l18.481-10.67  v21.34L69.488,82.594z"/></svg> -->
+        <svg class="data-icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 80.8 62.8">
+        <rect x="18.6" y="25" fill="#3BE4CF" stroke="#000" width="43.9" height="16.1"/>
+        <rect x="18.6" y="9" fill="#3BE4CF" stroke="#000" width="43.9" height="16.1"/>
+        <rect x="57.5" y="18.2" width="1.4" height="1.4"/>
+        <rect x="53.1" y="18.2" width="1.4" height="1.4"/>
+        <rect x="48.8" y="18.2" width="1.4" height="1.4"/>
+        <rect x="57.5" y="33.9" fill="#000" width="1.4" height="1.4"/>
+        <rect x="53.1" y="33.9" fill="#000" width="1.4" height="1.4"/>
+        <rect x="48.8" y="33.9" fill="#000" width="1.4" height="1.4"/>
+        <line fill="none" stroke="#000" x1="4.4" y1="52.1" x2="76.6" y2="52.1"/>
+        <rect x="35.4" y="46.8" fill="#021E5C" stroke="#000" width="10.8" height="10.8"/>
+        <line fill="none" stroke="#000" x1="40.5" y1="46.5" x2="40.5" y2="41.1"/>
+        <line fill="none" stroke="#000" x1="18.6" y1="25" x2="62.6" y2="25"/>
+        </svg>
+
     </section>
     <section class="dataset">
         <article class="dataset-container">
