terminado la cabecera de data

--- a/data.html
+++ b/data.html
@@ -34,9 +34,12 @@
         </nav>
     </header>
     <section class="data">
-        <h2 class="data-titulo">DATOS</h2>
-        <p class="data-texto">Conforme he ido desarrollando <strong>BISLAI</strong> he ido generando más y más datos. Algunos datos los he convertido y filtrado a formatos más amigables como JSON y CSV.</p>
-        <p>Es hora de compartir lo recolectado.</p>
+        <div class="data-figura"></div>
+        <div class="data-header-container">
+            <h2 class="data-titulo">DATOS</h2>
+            <p class="data-texto">Conforme he ido desarrollando <strong>BISLAI</strong> he ido generando más y más datos. Algunos datos los he convertido y filtrado a formatos más amigables como JSON y CSV.</p>
+            <p class="data-texto"><strong>Es hora de compartir lo recolectado.</strong></p>
+        </div>
         <svg class="data-icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 80.8 62.8">
         <rect x="18.6" y="25" fill="#3BE4CF" stroke="#000" width="43.9" height="16.1"/>
         <rect x="18.6" y="9" fill="#3BE4CF" stroke="#000" width="43.9" height="16.1"/>
@@ -57,7 +60,7 @@
         <article class="dataset-container">
             <h2 class="dataset-title">ELECCIONES</h2>
             <div class="data-texto-container">
-                <p class="data-texto">Este dataset contiene todas las votaciones que han generado las mociones. Se da el caso en el que hay mociones que se dividen por puntos, las cuales se votan por separado.</p>
+                <p class="data-texto">Algunas mociones  se dividen por puntos. Este dataset contiene todas las votaciones que han generado las mociones.</p>
                 <ul class="data-texto">
                     <li>
                         <strong>Fecha:</strong> el día en el que se realizo la votación
@@ -78,7 +81,7 @@
         <article class="dataset-container">
             <h2 class="dataset-title">MOCIONES</h2>
             <div class="data-texto-container">
-                <p class="data-texto">Este dataset contiene todas las votaciones que han generado las mociones. Se da el caso en el que hay mociones que se dividen por puntos, estos puntos se votan por separado.</p>
+                <p class="data-texto">Algunas mociones  se dividen por puntos. Este dataset contiene todas las votaciones que han generado las mociones.</p>
                 <p class="data-texto">A continuación que representa cada valor del objeto:</p>
                 <ul class="data-texto">
                     <li>
