--- a/creditos.html
+++ b/creditos.html
@@ -61,7 +61,7 @@
         <li>Podium speech by Juan Pablo Bravo from the Noun Project</li>
         <li>Photo by Louis Moncouyoux on Unsplash</li>
         <li>Photo by Lukas from Pexels https://www.pexels.com/photo/charts-on-black-wooden-table-669622/</li>
-        <li>Data by chinnan from the Noun Project</li>
+        <li>Rocket by Dev Patel from the Noun Project</li>
     </ul>
 
     </div>
